cli/src/tests/error/first.sibs
FIRST [];
FIRST [os window => "release{$version}-win.zip";]
FIRST ();